cmake_minimum_required(VERSION 3.26.4)

project("Test_Case" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
    ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/Modules)

set(_COMMON_OPTIONS
    "-m64;-stdlib=libc++;$<$<CONFIG:Debug>:-fsanitize=address;-fsanitize=undefined>"
)
set(_COMPILE_OPTIONS
    "-Wall;-Wextra;-Wpedantic;-Werror;-fvisibility=hidden;$<$<CONFIG:Debug>:-g>"
)
set(_LINK_OPTIONS "")

list(APPEND _COMPILE_OPTIONS ${_COMMON_OPTIONS})
list(APPEND _LINK_OPTIONS ${_COMMON_OPTIONS})

add_subdirectory("src")
